<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/parent_padding10"
    android:background="@drawable/crystal"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/android_icon2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/android_icon"
        android:src="@drawable/android" />

    <TextView
        android:id="@+id/android_text"
        style="@style/MainPageText"
        android:layout_below="@id/android_icon2"
        android:padding="10dp"
        android:shadowColor="#000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="10"
        android:text="@string/android_text"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/basic_text"
        style="@style/MainPageText"
        android:layout_below="@id/android_text"
        android:padding="10dp"
        android:shadowColor="#000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="10"
        android:text="@string/basic_text"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/quiz_text"
        style="@style/MainPageText"
        android:layout_below="@id/basic_text"
        android:padding="10dp"
        android:shadowColor="#000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="10"
        android:text="@string/quiz_text"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/next_page1"
        style="@style/CategoryButton"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:onClick="popUp"
        android:shadowColor="#000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="10"
        android:text="@string/begin_button" />

</RelativeLayout>