<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="5dp"
    android:background="@drawable/popup_design"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/pop_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:text="@string/x_text"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:gravity="center"
        android:background="@drawable/circlebackground"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/s_text"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/circlebackground"
            android:gravity="center"
            android:shadowColor="#000"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="10"
            android:text="@string/splash_s"
            android:textAllCaps="true"
            android:textColor="#f08080"
            android:textSize="40sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/l_text"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/circlebackground"
            android:gravity="center"
            android:shadowColor="#000"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="10"
            android:text="@string/splash_l"
            android:textAllCaps="true"
            android:textColor="#90ee90"
            android:textSize="40sp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/circlebackground"
            android:gravity="center"
            android:shadowColor="#000"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="10"
            android:text="@string/splash_u"
            android:textAllCaps="true"
            android:textColor="#ffff00"
            android:textSize="40sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name_editText"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/colorPrimaryDark"
        android:inputType="textPersonName"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/start"
        style="@style/CategoryButton"
        android:text="@string/start_button"
        android:layout_gravity="center"
        android:padding="@dimen/parent_padding10"
        android:layout_marginBottom="@dimen/parent_padding10"
        android:layout_marginTop="@dimen/parent_padding10"
        android:shadowColor="#000"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:onClick="lunchPage1"/>

</LinearLayout>
